--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Website Pertamaku</title>
+  <title>Website Keren</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      font-family: sans-serif;
       text-align: center;
-      margin-top: 50px;
-      background-color: #f5f5f5;
+      padding: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    a.button {
+      display: inline-block;
+      background: #ffb703;
+      padding: 10px 20px;
+      color: #000;
+      text-decoration: none;
+      border-radius: 8px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Halo Dunia!</h1>
-  <p>Ini website pertamaku di GitHub Pages 🚀</p>
+  <h1>Halo Dunia 👋</h1>
+  <p>Ini websitenya Rahmat!</p>
+  <a href="#" class="button">Lihat Selengkapnya</a>
 </body>
 </html>
