--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1>Halo Dunia 👋</h1>
-  <p>Ini websitenya Rahmat!</p>
+  <p>Ini website Argi!</p>
   <a href="#" class="button">Lihat Selengkapnya</a>
 </body>
 </html>
