--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -27,4 +27,35 @@
   <p>Ini halaman kedua yang berisi informasi tambahan.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
 </body>
+  <div class="container">
+    <h1>Selengkapnya tentang Argi</h1>
+
+    <div class="section">
+      <h2>🔭 I’m currently working on</h2>
+      <p>Saya sedang mengerjakan beberapa proyek website sederhana untuk belajar frontend dan mengenal GitHub Pages.</p>
+    </div>
+
+    <div class="section">
+      <h2>🌱 I’m currently learning</h2>
+      <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun portofolio online.</p>
+    </div>
+
+    <div class="section">
+      <h2>👯 I’m looking to collaborate on</h2>
+      <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, atau yang suka bikin project kreatif bareng.</p>
+    </div>
+
+    <div class="section">
+      <h2>💬 Ask me about</h2>
+      <p>Kalau kamu juga belajar bikin website atau tertarik soal self-development remaja, bisa ngobrol bareng!</p>
+    </div>
+
+    <div class="section">
+      <h2>📫 How to reach me</h2>
+      <p>Kamu bisa hubungi saya lewat DM Instagram @namakamu atau email ke argi@email.com</p>
+    </div>
+
+    <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
+  </div>
+</body>
 </html>
