--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -6,17 +6,17 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff3cd;
+      background-color:#2b2a2a;
       padding: 50px;
       text-align: center;
     }
     h1 {
-      color: #444;
+      color: #ffb259;
     }
     a {
       display: inline-block;
       margin-top: 30px;
-      color: #000;
+      color: #ffb259;
       text-decoration: none;
       font-weight: bold;
     }
@@ -30,27 +30,27 @@
   <div class="container">
     <h1>Selengkapnya tentang Argi</h1>
 
-    <div class="section">
+    <div class="working">
       <h2>🔭 I’m currently working on</h2>
       <p>Saya sedang mengerjakan beberapa proyek website sederhana untuk belajar frontend dan mengenal GitHub Pages.</p>
     </div>
 
-    <div class="section">
+    <div class="learning">
       <h2>🌱 I’m currently learning</h2>
       <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun portofolio online.</p>
     </div>
 
-    <div class="section">
+    <div class="collaborating">
       <h2>👯 I’m looking to collaborate on</h2>
       <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, atau yang suka bikin project kreatif bareng.</p>
     </div>
 
-    <div class="section">
+    <div class="qna">
       <h2>💬 Ask me about</h2>
       <p>Kalau kamu juga belajar bikin website atau tertarik soal self-development remaja, bisa ngobrol bareng!</p>
     </div>
 
-    <div class="section">
+    <div class="contact">
       <h2>📫 How to reach me</h2>
       <p>Kamu bisa hubungi saya lewat DM Instagram @namakamu atau email ke argi@email.com</p>
     </div>
@@ -59,3 +59,9 @@
   </div>
 </body>
 </html>
+<style>
+  .working { 
+    background-color: #141413;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+</style>
