--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Website Keren</title>
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #2b2a2a;
       font-family: sans-serif;
       text-align: center;
       padding: 50px;
