--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <body>
   <h1>Halo Dunia 👋</h1>
   <p>Ini website Argi!</p>
-  <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
+  <a href="selengkapnya.html" class="button">About Me</a>
 </body>
 </html>
