--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       padding: 50px;
     }
     h1 {
-      color: #333;
+      color: #f8f9fa;
     }
     a.button {
       display: inline-block;
