--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: inline-block;
       background: #ffb703;
       padding: 10px 20px;
-      color: #000;
+      color: #f8f9fa;
       text-decoration: none;
       border-radius: 8px;
       margin-top: 20px;
