--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -64,4 +64,6 @@
     background-color: #141413;
     text-align: left;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    color: #f8f9fa;
+  }
 </style>
