--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
       border-radius: 8px;
       margin-top: 20px;
     }
+    p { 
+      color: #f8f9fa
+    }
   </style>
 </head>
 <body>
   <h1>Halo Dunia 👋</h1>
   <p>Ini website Argi!</p>
-  <a href="selengkapnya.html" class="button">About Me</a>
+  <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
 </body>
 </html>
