--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -65,5 +65,19 @@
     text-align: left;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     color: #f8f9fa;
+    padding: 20px;
+    width: 100%;
+    border-sizing: border-box;
+    margin: 15px;
+  }
+  .learning {
+       background-color: #141413;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    color: #f8f9fa;
+    padding: 20px;
+    width: 100%;
+    border-sizing: border-box;
+    margin: 15px;
   }
 </style>
