--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -5,18 +5,18 @@
   <title>Selengkapnya</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: bahnschrift;
       background-color:#2b2a2a;
       padding: 50px;
       text-align: center;
     }
     h1 {
-      color: #ffb259;
+      color: #f8f9fa;
     }
     a {
       display: inline-block;
       margin-top: 30px;
-      color: #ffb259;
+      color: #f8f9fa;
       text-decoration: none;
       font-weight: bold;
     }
