--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -40,12 +40,12 @@
 
     <div class="learning">
       <h2>🌱 I’m currently learning</h2>
-      <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun portofolio online.</p>
+      <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun website portofolio online.</p>
     </div>
 
     <div class="collaborating">
       <h2>👯 I’m looking to collaborate on</h2>
-      <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, atau yang suka bikin project kreatif bareng.</p>
+      <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, bisnis atau yang suka bikin project kreatif bareng.</p>
     </div>
 
     <div class="qna">
@@ -55,7 +55,7 @@
 
     <div class="contact">
       <h2>📫 How to reach me</h2>
-      <p>Kamu bisa hubungi saya lewat DM Instagram @namakamu atau email ke argi@email.com</p>
+      <p>Kamu bisa hubungi saya lewat DM Instagram @argifaiz_ atau email ke argifaiz0111@email.com</p>
     </div>
 
     <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
@@ -74,6 +74,36 @@
     margin: 15px;
   }
   .learning {
+       background-color: #141413;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    color: #f8f9fa;
+    padding: 20px;
+    width: 100%;
+    border-sizing: border-box;
+    margin: 15px;
+  }
+  .collaborating {
+       background-color: #141413;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    color: #f8f9fa;
+    padding: 20px;
+    width: 100%;
+    border-sizing: border-box;
+    margin: 15px;
+  }
+  .qna {
+       background-color: #141413;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    color: #f8f9fa;
+    padding: 20px;
+    width: 100%;
+    border-sizing: border-box;
+    margin: 15px;
+  }
+  .contact {
        background-color: #141413;
     text-align: left;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
