--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -29,7 +29,7 @@
   <h1>Selengkapnya tentang Website Argi</h1>
   <p>Ini halaman kedua yang berisi informasi tambahan.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
-</body>
+  
   <div class="container">
     <h1>Selengkapnya tentang Argi</h1>
 
@@ -61,56 +61,23 @@
     <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   </div>
 </body>
-</html>
+
 <style>
-  .working { 
+  .working,
+  .learning,
+  .collaborating,
+  .qna,
+  .contact { 
     background-color: #141413;
     text-align: left;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     color: #f8f9fa;
     padding: 20px;
     width: 100%;
-    border-sizing: border-box;
-    margin: 15px;
+    box-sizing: border-box;
+    margin: 5px;
+    max-width: 800px;
   }
-  .learning {
-       background-color: #141413;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: #f8f9fa;
-    padding: 20px;
-    width: 100%;
-    border-sizing: border-box;
-    margin: 15px;
-  }
-  .collaborating {
-       background-color: #141413;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: #f8f9fa;
-    padding: 20px;
-    width: 100%;
-    border-sizing: border-box;
-    margin: 15px;
-  }
-  .qna {
-       background-color: #141413;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: #f8f9fa;
-    padding: 20px;
-    width: 100%;
-    border-sizing: border-box;
-    margin: 15px;
-  }
-  .contact {
-       background-color: #141413;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: #f8f9fa;
-    padding: 20px;
-    width: 100%;
-    border-sizing: border-box;
-    margin: 15px;
-  }
+
 </style>
+</html>
