--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   <h1>Halo Dunia 👋</h1>
   <p>Ini website Argi!</p>
   <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
+  <a href="portofolio.html" class="button">Portofolio</a>
 </body>
 </html>
