--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       color: #f8f9fa;
     }
     a.button {
-      display: inline-block;
+      display: block;
       background: #ffb703;
       padding: 10px 20px;
       color: #f8f9fa;
