--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       text-decoration: none;
       border-radius: 8px;
       margin-top: 20px;
+      width: 200px
     }
     p { 
       color: #f8f9fa
