--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       text-decoration: none;
       border-radius: 8px;
       margin-top: 20px;
+      margin-left: auto
+      margin-right: auto
       width: 200px
     }
     p { 
