--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       text-decoration: none;
       border-radius: 8px;
       margin-top: 20px;
-      margin-left: auto
-      margin-right: auto
-      width: 200px
+      margin-left: auto;
+      margin-right: autop;
+      width: 200px;
     }
     p { 
       color: #f8f9fa
