--- a/portofolio.html
+++ b/portofolio.html
@@ -9,3 +9,23 @@
       background-color:#2b2a2a;
       padding: 50px;
       text-align: center;
+   }
+    h1 {
+      color: #f8f9fa;
+    }
+    a {
+      display: inline-block;
+      margin-top: 30px;
+      color: #f8f9fa;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    p {
+      color: #f8f9fa
+    }
+  </style>
+</head>
+<body>
+  <h1>Portofolio Saya</h1>
+  <p>Kumpulan projek yang pernah saya buat.</p>
+  <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
