--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       border-radius: 8px;
       margin-top: 20px;
       margin-left: auto;
-      margin-right: autop;
+      margin-right: auto;
       width: 200px;
     }
     p { 
