--- a/portofolio.html
+++ b/portofolio.html
@@ -12,6 +12,7 @@
    }
     h1 {
       color: #f8f9fa;
+      margin-bottom: 10px;
     }
     a {
       display: inline-block;
@@ -22,6 +23,7 @@
     }
     p {
       color: #f8f9fa
+      margin-top: 5px;
     }
   </style>
 </head>
