--- a/portofolio.html
+++ b/portofolio.html
@@ -31,3 +31,10 @@
   <h1>Portofolio Saya</h1>
   <p>Kumpulan projek yang pernah saya buat.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
+
+  <div class="porto-item">
+  <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" class="porto-img">
+  <h2>Design Copywriting 1</h2>
+  <p>Ini adalah salah satu design yang saya buat di akun instagram tentang pengembangan diri. @jadiberkelas_.</p>
+  <a href="https://www.instagram.com/jadiberkelas_?utm_source=ig_web_button_share_sheet&igsh=Z2V1YWo3dnozbWxy" class="btn-download" target="_blank">Lihat Desain</a>
+</div>
