--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Website Keren</title>
+  <title>Website Argi</title>
   <style>
     body {
       background-color: #2b2a2a;
