--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <h1>Selamat Datang 😎</h1>
-  <p>Ini website Argi!</p>
+  <p>Ini website Argi! Berisi Pengenalan diri singkat dan Portofolio</p>
   <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
   <a href="portofolio.html" class="button">Portofolio</a>
 </body>
