--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -27,7 +27,8 @@
 </head>
 <body>
   <h1>Selengkapnya tentang Website Argi</h1>
-  <p>Ini halaman kedua yang berisi informasi tambahan.</p>
+  <p>Aku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan dari jurusan Bisnis Digital dan Pemasaran. 
+  Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   
   <div class="container">
