--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -21,14 +21,17 @@
       font-weight: bold;
     }
     p {
-      color: #f8f9fa
-    }
+  color: #f8f9fa;
+  margin-top: 15px; 
+  margin-bottom: 15px;
+  line-height: 1.6; 
+}
   </style>
 </head>
 <body>
   <h1>Selengkapnya tentang Website Argi</h1>
-  <p>Aku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan dari jurusan Bisnis Digital dan Pemasaran. 
-  Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
+  <p>Aku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan dari jurusan Bisnis Digital dan Pemasaran. </p>
+  <p>Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   
   <div class="container">
