--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <h1>Selengkapnya tentang Website Argi</h1>
-  <p>Aku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan dari jurusan Bisnis Digital dan Pemasaran. </p>
+  <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran. </p>
   <p>Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   
