--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -22,15 +22,16 @@
     }
     p {
   color: #f8f9fa;
-  margin-top: 15px; 
-  margin-bottom: 15px;
+  margin-top: 10px; 
+  margin-bottom: 10px;
   line-height: 1.6; 
 }
   </style>
 </head>
 <body>
   <h1>Selengkapnya tentang Website Argi</h1>
-  <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi. AKu lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran. </p>
+  <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi. </p>
+    <p>AKu lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran. </p>
   <p>Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
   <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   
