--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -6,13 +6,16 @@
   <style>
     body {
       font-family: bahnschrift;
-      background-color:#2b2a2a;
+      background-color: #2b2a2a;
       padding: 50px;
       text-align: center;
-    }
-    h1 {
       color: #f8f9fa;
     }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
     a {
       display: inline-block;
       margin-top: 30px;
@@ -20,70 +23,66 @@
       text-decoration: none;
       font-weight: bold;
     }
+
     p {
-  color: #f8f9fa;
-  margin-top: 10px; 
-  margin-bottom: 10px;
-  line-height: 1; 
-  text-align: justify;
-}
+      margin-top: 10px;
+      margin-bottom: 10px;
+      line-height: 1.6;
+      text-align: justify;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .section-box {
+      background-color: #141413;
+      text-align: left;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      margin: 20px 0;
+      border-radius: 12px;
+    }
+
+    .section-box h2 {
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>Selengkapnya tentang Website Argi</h1>
-  <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi. </p>
-    <p>AKu lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran. </p>
-  <p>Aku memiliki Interest di Bidang Bisnis{Analisis, Penjualan, Pemasaran, Manajemen, Sumberdaya Manusia}.</p>
-  <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
-  
   <div class="container">
-    <h1>Selengkapnya tentang Argi</h1>
+    <h1>Selengkapnya tentang Website Argi</h1>
+    <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi.</p>
+    <p>Aku lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran.</p>
+    <p>Aku memiliki interest di bidang bisnis seperti Analisis, Penjualan, Pemasaran, Manajemen, dan Sumber Daya Manusia.</p>
 
-    <div class="working">
+    <div class="section-box">
       <h2>🔭 I’m currently working on</h2>
       <p>Saya sedang mengerjakan beberapa proyek website sederhana untuk belajar frontend dan mengenal GitHub Pages.</p>
     </div>
 
-    <div class="learning">
+    <div class="section-box">
       <h2>🌱 I’m currently learning</h2>
       <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun website portofolio online.</p>
     </div>
 
-    <div class="collaborating">
+    <div class="section-box">
       <h2>👯 I’m looking to collaborate on</h2>
       <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, bisnis atau yang suka bikin project kreatif bareng.</p>
     </div>
 
-    <div class="qna">
+    <div class="section-box">
       <h2>💬 Ask me about</h2>
       <p>Kalau kamu juga belajar bikin website atau tertarik soal self-development remaja, bisa ngobrol bareng!</p>
     </div>
 
-    <div class="contact">
+    <div class="section-box">
       <h2>📫 How to reach me</h2>
-      <p>Kamu bisa hubungi saya lewat DM Instagram @argifaiz_ atau email ke argifaiz0111@email.com</p>
+      <p>Kamu bisa hubungi saya lewat DM Instagram <b>@argifaiz_</b> atau email ke <b>argifaiz0111@email.com</b></p>
     </div>
 
     <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   </div>
 </body>
-
-<style>
-  .working,
-  .learning,
-  .collaborating,
-  .qna,
-  .contact { 
-    background-color: #141413;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: #f8f9fa;
-    padding: 20px;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 15px;
-    max-width: 1600px;
-  }
-
-</style>
 </html>
