--- a/portofolio.html
+++ b/portofolio.html
@@ -11,63 +11,78 @@
       text-align: center;
       color: #f8f9fa;
     }
+
     h1 {
       margin-bottom: 10px;
     }
+
     p {
       margin-top: 5px;
     }
+
     a {
-      display: inline-block;
-      margin-top: 30px;
       color: #f8f9fa;
       text-decoration: none;
       font-weight: bold;
     }
-    
+
+    .portfolio-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+
     .card {
       background-color: #141413;
       color: #f8f9fa;
       padding: 20px;
-      margin: 20px auto;
       border-radius: 12px;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      width: 280px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
       text-align: left;
+      transition: transform 0.3s;
     }
+
+    .card:hover {
+      transform: scale(1.03);
+    }
+
     .card img {
-      width: 65%;
-      border-radius: 20px;
+      width: 100%;
+      border-radius: 12px;
       margin-bottom: 15px;
     }
+
     .card h2 {
       margin-bottom: 10px;
-      font-size: 20px;
+      font-size: 18px;
     }
+
     .card p {
       font-size: 14px;
       margin-bottom: 15px;
     }
+
     .btn-download {
       display: inline-block;
       background-color: #ffb703;
       color: #fff;
-      padding: 10px 20px;
+      padding: 8px 16px;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
     }
+
     .btn-download:hover {
       background-color: #e0a700;
     }
-    a.back-link {
-      margin-top: 30px;
-      color: #f8f9fa;
-      font-weight: bold;
-      text-decoration: none;
+
+    .back-link {
       display: inline-block;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -75,11 +90,27 @@
   <h1>Portofolio Saya</h1>
   <p>Kumpulan projek yang pernah saya buat.</p>
 
-  <div class="card">
-    <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" class="porto-img" />
-    <h2>Design Copywriting 1</h2>
-    <p>Ini adalah salah satu desain yang saya buat di akun Instagram tentang pengembangan diri. @jadiberkelas_.</p>
-    <a href="https://www.instagram.com/jadiberkelas_?utm_source=ig_web_button_share_sheet&igsh=Z2V1YWo3dnozbWxy" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+  <div class="portfolio-container">
+    <div class="card">
+      <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" />
+      <h2>Design Copywriting 1</h2>
+      <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+    </div>
+
+    <div class="card">
+      <img src="contoh2.png" alt="Design 2" />
+      <h2>Design Copywriting 2</h2>
+      <p>Desain konten lain dengan pesan self-growth dan produktivitas.</p>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+    </div>
+
+    <div class="card">
+      <img src="contoh3.png" alt="Design 3" />
+      <h2>Design Copywriting 3</h2>
+      <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+    </div>
   </div>
 
   <a href="index.html" class="back-link">⬅️ Kembali ke Halaman Utama</a>
