--- a/portofolio.html
+++ b/portofolio.html
@@ -99,10 +99,10 @@
     </div>
 
     <div class="card">
-      <img src="contoh2.png" alt="Design 2" />
-      <h2>Design Copywriting 2</h2>
-      <p>Desain konten lain dengan pesan self-growth dan produktivitas.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+      <img src="Konsep video advertising.png" alt="Konsep video Advertising" />
+      <h2>Konsep Video Advertising</h2>
+      <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
+      <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank">Lihat Desain</a>
     </div>
 
     <div class="card">
