--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>Selamat Datang </h1>
+  <h1>Hi!Selamat Datang👋 </h1>
   <p>Ini website Argi! Berisi Pengenalan diri singkat dan Portofolio</p>
   <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
   <a href="portofolio.html" class="button">Portofolio</a>
