--- a/portofolio.html
+++ b/portofolio.html
@@ -5,11 +5,12 @@
   <title>Portofolio</title>
   <style>
     body {
-      font-family: bahnschrift;
+      font-family: bahnschrift, sans-serif;
       background-color: #2b2a2a;
       padding: 50px;
       text-align: center;
       color: #f8f9fa;
+      margin: 0;
     }
 
     h1 {
@@ -35,29 +36,31 @@
     }
 
     .card {
-       background-color: #141413;
-  color: #f8f9fa;
-  padding: 20px;
-  border-radius: 12px;
-  width: 280px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  transition: transform 0.3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 460px; 
+      background-color: #141413;
+      color: #f8f9fa;
+      padding: 20px;
+      border-radius: 12px;
+      width: 280px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      transition: transform 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 460px; 
+    }
 
     .card:hover {
       transform: scale(1.03);
     }
 
     .card img {
-       width: 100%;
-  height: 160px;
-  object-fit: cover;
-  border-radius: 12px;
-  margin-bottom: 15px;
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    }
 
     .card h2 {
       margin-bottom: 10px;
@@ -87,6 +90,9 @@
     .back-link {
       display: inline-block;
       margin-top: 40px;
+      color: #f8f9fa;
+      font-weight: bold;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -99,21 +105,21 @@
       <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" />
       <h2>Design Copywriting 1</h2>
       <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
 
     <div class="card">
       <img src="Konsep video advertising.png" alt="Konsep video Advertising" />
       <h2>Konsep Video Advertising</h2>
       <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
-      <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank">Lihat Desain</a>
+      <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
 
     <div class="card">
       <img src="contoh3.png" alt="Design 3" />
       <h2>Design Copywriting 3</h2>
       <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
   </div>
 
