--- a/portofolio.html
+++ b/portofolio.html
@@ -98,7 +98,7 @@
 </head>
 <body>
   <h1>Portofolio Saya</h1>
-  <p>Kumpulan projek yang pernah saya buat.</p>
+  <p>contoh projek yang pernah saya buat.</p>
 
   <div class="portfolio-container">
     <div class="card">
