--- a/portofolio.html
+++ b/portofolio.html
@@ -10,7 +10,6 @@
       padding: 50px;
       text-align: center;
       color: #f8f9fa;
-      margin: 0;
     }
 
     h1 {
@@ -47,7 +46,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 460px; 
+      height: 500px;
     }
 
     .card:hover {
@@ -56,20 +55,27 @@
 
     .card img {
       width: 100%;
-      height: 160px;
-      object-fit: cover;
+      max-height: 250px;
+      object-fit: contain;
       border-radius: 12px;
       margin-bottom: 15px;
     }
 
-    .card h2 {
+    .card-content {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .card-content h2 {
       margin-bottom: 10px;
       font-size: 18px;
     }
 
-    .card p {
+    .card-content p {
       font-size: 14px;
-      margin-bottom: auto;
+      margin-bottom: 15px;
     }
 
     .btn-download {
@@ -81,6 +87,7 @@
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
+      align-self: center;
     }
 
     .btn-download:hover {
@@ -91,35 +98,41 @@
       display: inline-block;
       margin-top: 40px;
       color: #f8f9fa;
-      font-weight: bold;
       text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>Portofolio Saya</h1>
-  <p>contoh projek yang pernah saya buat.</p>
+  <p>Kumpulan projek yang pernah saya buat.</p>
 
   <div class="portfolio-container">
     <div class="card">
       <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" />
-      <h2>Design Copywriting 1</h2>
-      <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      <div class="card-content">
+        <h2>Design Copywriting 1</h2>
+        <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
+        <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      </div>
     </div>
 
     <div class="card">
       <img src="Konsep video advertising.png" alt="Konsep video Advertising" />
-      <h2>Konsep Video Advertising</h2>
-      <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
-      <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      <div class="card-content">
+        <h2>Konsep Video Advertising</h2>
+        <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
+        <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      </div>
     </div>
 
     <div class="card">
       <img src="contoh3.png" alt="Design 3" />
-      <h2>Design Copywriting 3</h2>
-      <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      <div class="card-content">
+        <h2>Design Copywriting 3</h2>
+        <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
+        <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      </div>
     </div>
   </div>
 
