--- a/portofolio.html
+++ b/portofolio.html
@@ -130,7 +130,7 @@
       <img src="contoh3.png" alt="Design 3" />
       <div class="card-content">
         <h2>Design Copywriting 3</h2>
-        <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
+        <p>Proyek desain dengan gaya visual yang edukatif dan elegan.</p>
         <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
       </div>
     </div>
