--- a/portofolio.html
+++ b/portofolio.html
@@ -5,7 +5,7 @@
   <title>Portofolio</title>
   <style>
     body {
-      font-family: bahnschrift, sans-serif;
+      font-family: bahnschrift;
       background-color: #2b2a2a;
       padding: 50px;
       text-align: center;
@@ -41,12 +41,8 @@
       border-radius: 12px;
       width: 280px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-      text-align: center;
+      text-align: left;
       transition: transform 0.3s;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 500px;
     }
 
     .card:hover {
@@ -55,25 +51,16 @@
 
     .card img {
       width: 100%;
-      max-height: 250px;
-      object-fit: contain;
       border-radius: 12px;
       margin-bottom: 15px;
     }
 
-    .card-content {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .card-content h2 {
+    .card h2 {
       margin-bottom: 10px;
       font-size: 18px;
     }
 
-    .card-content p {
+    .card p {
       font-size: 14px;
       margin-bottom: 15px;
     }
@@ -87,7 +74,6 @@
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
-      align-self: center;
     }
 
     .btn-download:hover {
@@ -97,9 +83,6 @@
     .back-link {
       display: inline-block;
       margin-top: 40px;
-      color: #f8f9fa;
-      text-decoration: none;
-      font-weight: bold;
     }
   </style>
 </head>
@@ -110,29 +93,23 @@
   <div class="portfolio-container">
     <div class="card">
       <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" />
-      <div class="card-content">
-        <h2>Design Copywriting 1</h2>
-        <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
-        <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
-      </div>
+      <h2>Design Copywriting 1</h2>
+      <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
     </div>
 
     <div class="card">
       <img src="Konsep video advertising.png" alt="Konsep video Advertising" />
-      <div class="card-content">
-        <h2>Konsep Video Advertising</h2>
-        <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
-        <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
-      </div>
+      <h2>Konsep Video Advertising</h2>
+      <p>Penulisan konsep dan script konten periklanan produk Barang dan Jasa.</p>
+      <a href="https://www.instagram.com/reel/CoObl31jt4q/?utm_source=ig_web_copy_link&igsh=MTJhdXoyZjk0dXIwNQ==" class="btn-download" target="_blank">Lihat Desain</a>
     </div>
 
     <div class="card">
       <img src="contoh3.png" alt="Design 3" />
-      <div class="card-content">
-        <h2>Design Copywriting 3</h2>
-        <p>Proyek desain dengan gaya visual yang edukatif dan elegan.</p>
-        <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
-      </div>
+      <h2>Design Copywriting 3</h2>
+      <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
+      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
     </div>
   </div>
 
