--- a/portofolio.html
+++ b/portofolio.html
@@ -108,7 +108,7 @@
     <div class="card">
       <img src="contoh3.png" alt="Design 3" />
       <h2>Design Copywriting 3</h2>
-      <p>Proyek desain dengan gaya visual yang edukatif dan maskulin.</p>
+      <p>Proyek desain dengan gaya visual yang edukatif dan elegan.</p>
       <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank">Lihat Desain</a>
     </div>
   </div>
