--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       margin-left: auto;
       margin-right: auto;
       width: 200px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
     p { 
       color: #f8f9fa
