--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     }
     h1 {
       color: #f8f9fa;
+      background-color: #141413;
+      text-align: left;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      margin: 20px 0;
+      border-radius: 12px;
+      p
     }
     a.button {
       display: block;
@@ -27,9 +34,7 @@
       width: 200px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
-    p { 
-      color: #f8f9fa
-    }
+  
   </style>
 </head>
 <body>
