--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@
       font-family: sans-serif;
       text-align: center;
       padding: 50px;
-    }
-    h1 {
       color: #f8f9fa;
-      background-color: #141413;
-      text-align: left;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      margin: 20px 0;
-      border-radius: 12px;
-      p
     }
+
+    /* Container box untuk welcome section */
+    .welcome-box {
+      background-color: #141413;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      max-width: 600px;
+      margin: 0 auto 40px auto; /* tengah dan bawah spasi */
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 15px;
+      font-weight: 700;
+      font-size: 2.5rem;
+      color: #f8f9fa;
+    }
+
+    p {
+      font-size: 1.1rem;
+      color: #d1d1d1;
+      margin-top: 0;
+    }
+
     a.button {
       display: block;
       background: #ffb703;
@@ -28,19 +44,26 @@
       color: #f8f9fa;
       text-decoration: none;
       border-radius: 8px;
-      margin-top: 20px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 20px auto 0 auto;
       width: 200px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      font-weight: bold;
+      transition: background-color 0.3s;
     }
-  
+    a.button:hover {
+      background-color: #e0a700;
+    }
   </style>
 </head>
 <body>
-  <h1>Hi!Selamat Datang👋 </h1>
-  <p>Ini website Argi! Berisi Pengenalan diri singkat dan Portofolio</p>
+
+  <div class="welcome-box">
+    <h1>Hi! Selamat Datang 👋</h1>
+    <p>Ini website Argi! Berisi Pengenalan diri singkat dan Portofolio</p>
+  </div>
+
   <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
   <a href="portofolio.html" class="button">Portofolio</a>
+
 </body>
 </html>
