--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="welcome-box">
     <h1>Hi! Selamat Datang 👋</h1>
-    <p>Ini website Argi! Berisi Pengenalan diri singkat dan Portofolio</p>
+    <p>Ini website Argi! Berisi Pengenalan diri dan Portofolio</p>
   </div>
 
   <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
