--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Selengkapnya tentang Website Argi</h1>
+    <h1>Selengkapnya tentang Saya</h1>
     <p>Namaku Argi Faiz Alghiffari, biasa dipanggil Argi.</p>
     <p>Aku lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran.</p>
     <p>Aku memiliki interest di bidang bisnis seperti Analisis, Penjualan, Pemasaran, Manajemen, dan Sumber Daya Manusia.</p>
