--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -2,15 +2,15 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Selengkapnya</title>
   <style>
     body {
-      font-family: bahnschrift;
+      font-family: bahnschrift, sans-serif;
       background-color: #2b2a2a;
       padding: 50px;
       text-align: center;
       color: #f8f9fa;
+      margin: 0;
     }
 
     h1 {
@@ -23,13 +23,17 @@
       color: #f8f9fa;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #ffb703;
     }
 
     p {
       margin-top: 10px;
       margin-bottom: 10px;
       line-height: 1.5;
-      font-size: 16px;
       text-align: justify;
     }
 
@@ -45,33 +49,37 @@
       padding: 20px;
       margin: 20px 0;
       border-radius: 12px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+
+    .section-box:hover {
+      transform: scale(1.03);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     }
 
     .section-box h2 {
       margin-bottom: 10px;
+      font-weight: 600;
     }
 
+    /* Responsive untuk mobile */
     @media (max-width: 600px) {
       body {
         padding: 20px;
       }
-
       .container {
         max-width: 100%;
-        padding: 0 10px;
       }
-
       p {
-        font-size: 14px;
+        font-size: 16px;
         line-height: 1.4;
       }
-
       .section-box {
         padding: 15px;
       }
     }
   </style>
-</head>
 </head>
 <body>
   <div class="container">
