--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Website Argi</title>
   <style>
     body {
