--- a/portofolio.html
+++ b/portofolio.html
@@ -1,3 +1,25 @@
+
+Ubah .portfolio-container supaya kartu tumpuk vertikal dan full lebar (responsive):
+css
+Salin
+Edit
+.portfolio-container {
+  display: flex;
+  flex-direction: column; /* kartu disusun vertikal */
+  gap: 20px;
+  max-width: 600px;  /* biar gak terlalu lebar di desktop */
+  margin: 0 auto;    /* tengahin container */
+  padding-bottom: 20px;
+  overflow-x: visible; /* hilangkan scroll horizontal */
+}
+.card {
+  width: 100%; /* lebar kartu full container */
+  max-width: 100%;
+}
+Contoh lengkap portofolio dengan scroll vertikal:
+html
+Salin
+Edit
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -25,12 +47,13 @@
 
     .portfolio-container {
       display: flex;
-      flex-wrap: nowrap; /* kartu berdampingan */
-      justify-content: flex-start; /* rata kiri */
+      flex-direction: column; /* vertikal */
       gap: 20px;
-      overflow-x: auto; /* scroll horizontal */
-      padding-bottom: 10px;
-      -webkit-overflow-scrolling: touch; /* buat smooth scroll di iOS */
+      max-width: 600px;
+      margin: 0 auto;
+      padding-bottom: 20px;
+      overflow-x: visible;
+      text-align: left;
     }
 
     .card {
@@ -38,17 +61,15 @@
       color: #f8f9fa;
       padding: 20px;
       border-radius: 12px;
-      width: 280px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-      text-align: left;
-      flex-shrink: 0; /* supaya ga mengecil */
+      width: 100%;
       transition: transform 0.3s;
       display: flex;
       flex-direction: column;
     }
 
     .card:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
       cursor: pointer;
     }
 
@@ -81,34 +102,11 @@
       font-weight: bold;
       transition: background 0.3s;
       text-align: center;
+      width: fit-content;
     }
 
     .btn-download:hover {
       background-color: #e0a700;
-    }
-
-    /* Responsif untuk layar kecil */
-    @media (max-width: 600px) {
-      .portfolio-container {
-        gap: 15px;
-        padding-bottom: 15px;
-      }
-      .card {
-        width: 220px;
-      }
-      .card img {
-        height: 140px;
-      }
-    }
-
-    /* Kalau mau, buat scrollbar terlihat lebih keren */
-    .portfolio-container::-webkit-scrollbar {
-      height: 8px;
-    }
-
-    .portfolio-container::-webkit-scrollbar-thumb {
-      background: #ffb703;
-      border-radius: 4px;
     }
   </style>
 </head>
