--- a/portofolio.html
+++ b/portofolio.html
@@ -1,59 +1,44 @@
 
-Ubah .portfolio-container supaya kartu tumpuk vertikal dan full lebar (responsive):
-css
-Salin
-Edit
-.portfolio-container {
-  display: flex;
-  flex-direction: column; /* kartu disusun vertikal */
-  gap: 20px;
-  max-width: 600px;  /* biar gak terlalu lebar di desktop */
-  margin: 0 auto;    /* tengahin container */
-  padding-bottom: 20px;
-  overflow-x: visible; /* hilangkan scroll horizontal */
-}
-.card {
-  width: 100%; /* lebar kartu full container */
-  max-width: 100%;
-}
-Contoh lengkap portofolio dengan scroll vertikal:
-html
-Salin
-Edit
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portofolio</title>
+  <title>Portofolio Saya</title>
   <style>
     body {
-      font-family: bahnschrift, sans-serif;
       background-color: #2b2a2a;
-      padding: 20px;
+      font-family: bahnschrift, sans-serif;
+      padding: 50px 20px;
       color: #f8f9fa;
-      margin: 0;
       text-align: center;
+      margin: 0;
     }
 
     h1 {
       margin-bottom: 10px;
+      font-weight: 700;
+      font-size: 2.5rem;
+      color: #f8f9fa;
     }
 
-    p.description {
+    p {
       margin-top: 5px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
+      font-size: 1.1rem;
+      color: #d1d1d1;
     }
 
     .portfolio-container {
       display: flex;
-      flex-direction: column; /* vertikal */
-      gap: 20px;
-      max-width: 600px;
-      margin: 0 auto;
-      padding-bottom: 20px;
-      overflow-x: visible;
-      text-align: left;
+      flex-wrap: nowrap; /* horizontal default */
+      justify-content: center;
+      gap: 30px;
+      margin-top: 20px;
+      align-items: flex-start;
+      overflow-x: auto; /* scroll horizontal di desktop */
+      padding-bottom: 10px;
+      scroll-behavior: smooth;
     }
 
     .card {
@@ -61,21 +46,22 @@ Edit
       color: #f8f9fa;
       padding: 20px;
       border-radius: 12px;
+      width: 280px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-      width: 100%;
+      text-align: left;
       transition: transform 0.3s;
+      flex-shrink: 0; /* jangan mengecil */
       display: flex;
       flex-direction: column;
     }
 
     .card:hover {
       transform: scale(1.03);
-      cursor: pointer;
     }
 
     .card img {
       width: 100%;
-      height: 180px;
+      height: 240px;
       object-fit: cover;
       border-radius: 12px;
       margin-bottom: 15px;
@@ -89,7 +75,6 @@ Edit
     .card p {
       font-size: 14px;
       margin-bottom: 15px;
-      flex-grow: 1;
     }
 
     .btn-download {
@@ -101,19 +86,43 @@ Edit
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
-      text-align: center;
-      width: fit-content;
+      align-self: flex-start;
     }
 
     .btn-download:hover {
       background-color: #e0a700;
+    }
+
+    .back-link {
+      display: inline-block;
+      margin-top: 40px;
+      color: #f8f9fa;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    /* Responsive untuk layar kecil (HP) */
+    @media (max-width: 600px) {
+      .portfolio-container {
+        flex-direction: column; /* vertikal */
+        flex-wrap: nowrap;
+        overflow-x: visible; /* hilangkan scroll horizontal */
+        gap: 20px;
+        align-items: center; /* center card vertikal */
+      }
+
+      .card {
+        width: 90vw; /* sesuaikan dengan layar HP */
+        max-width: 400px;
+        margin: 0 auto;
+      }
     }
   </style>
 </head>
 <body>
 
   <h1>Portofolio Saya</h1>
-  <p class="description">Kumpulan projek yang pernah saya buat.</p>
+  <p>Kumpulan projek yang pernah saya buat.</p>
 
   <div class="portfolio-container">
     <div class="card">
@@ -137,6 +146,11 @@ Edit
       <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
   </div>
+
+  <a href="index.html" class="back-link">⬅️ Kembali ke Halaman Utama</a>
+
+</body>
+</html>
 
   <a href="index.html" style="display:inline-block; margin-top:40px; color:#f8f9fa; font-weight:bold; text-decoration:none;">⬅️ Kembali ke Halaman Utama</a>
 
