--- a/portofolio.html
+++ b/portofolio.html
@@ -156,9 +156,9 @@
 
     <div class="card">
       <img src="contoh3.png" alt="Design 3" />
-      <h2>Design Copywriting 3</h2>
-      <p>Proyek desain dengan gaya visual yang edukatif dan elegan.</p>
-      <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
+      <h2>Pengembangan Website</h2>
+      <p>Proyek pembuatan website. entry level</p>
+      <a href="https://argifaiz.github.io/argifaiz/" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
   </div>
 
