--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     <p>Ini website Argi! Berisi Pengenalan diri dan Portofolio</p>
   </div>
 
-  <a href="selengkapnya.html" class="button">Lihat Selengkapnya</a>
-  <a href="portofolio.html" class="button">Portofolio</a>
+  <a href="selengkapnya.html" class="button">👤Tentang Saya</a>
+  <a href="portofolio.html" class="button">💼Portofolio</a>
 
