--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     }
 
     a.button {
-      display: block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
       background: #ffb703;
       padding: 10px 20px;
       color: #f8f9fa;
@@ -56,6 +59,8 @@
     a.button:hover {
       background-color: #e0a700;
     }
+
+    .
 
     /* Responsif untuk layar kecil */
     @media (max-width: 480px) {
@@ -77,7 +82,14 @@
         padding: 15px 20px;
         max-width: 100%;
       }
-    }
+  a.button .emoji { 
+    font-size: 1.2rem;
+    line-height: 1;
+  }
+  a.button .label {
+    display:inline block;
+  }
+      
   </style>
 </head>
 <body>
@@ -87,6 +99,13 @@
     <p>Ini website Argi! Berisi Pengenalan diri dan Portofolio</p>
   </div>
 
-  <a href="selengkapnya.html" class="button">👤Tentang Saya</a>
-  <a href="portofolio.html" class="button">💼Portofolio</a>
+  <a href="selengkapnya.html" class="button">
+    <span class="emoji">👤</span>
+    <span class="label">Tentang Saya</span>
+  </a>
+  
+  <a href="portofolio.html" class="button">
+  <span class="emoji">💼</span>
+  <span class="label">Portofolio</span>
+  </a>
 
