--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
   a.button .label {
     display:inline block;
   }
+      a. button-group { 
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+      }
       
   </style>
 </head>
@@ -109,4 +115,14 @@
   <span class="emoji">💼</span>
   <span class="label">Portofolio</span>
   </a>
-
+<div class="button-group">
+   <a href="selengkapnya.html" class="button">
+    <span class="emoji">👤</span>
+    <span class="label">Tentang Saya</span>
+  </a>
+  
+  <a href="portofolio.html" class="button">
+  <span class="emoji">💼</span>
+  <span class="label">Portofolio</span>
+  </a> 
+</div>
