--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@
       text-align: center;
   
     }
+    
     a.button:hover {
   background-color: #e0a700;
   transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
-    .
-
     .button-group {
   display: flex;
-  flex-direction: row; /* sejajar di desktop */
+  flex-direction: column; /* sejajar di desktop */
   justify-content: center;
   gap: 20px;
 }
